Fix select key bug on safari

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ select {
     overflow: auto;
     white-space: nowrap;
     font-size: 0;
+    user-select: none;
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none;
 }
 
 /* piano keys */
@@ -98,7 +101,6 @@ select {
     display: inline-block;
     font-size: 1vw;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
-    user-select: none;
 }
 
 /* piano note name container */
